bubble placement effective. Horizontal no-overlap effective. Need: fix vertical no-overlap

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ div {
 }
 
 .active {
-  color: yellow;
+  background-color: yellow;
 }
 
 /* .available {
@@ -72,4 +72,5 @@ div {
 
 .taken {
   background: gray;
+  border-radius: 50%;
 }
